--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+
+
 html{
     height: 100%;
     width: 100%;
@@ -68,12 +70,17 @@ li a{
     font-weight: bold;
     text-align: center;
 }
+#r1{
+    display: flex;
+    justify-content: center;
+}
 #ThisSite{
     text-align: center;
     border: 10px solid white ;
     width: 20%;
     border-radius: 15%;
-    margin-left: 40%;
+    margin-right: 10%;
+    margin-left: 10%;
     margin-top: 2.5%;
 }
 #ThisSite h1{
@@ -186,6 +193,7 @@ nav{
 
 /*Stars Animation*/
 #stars1{
+    
     width: 1px;
     height: 1px;
     background: transparent;
@@ -347,6 +355,7 @@ nav{
     1335px 872px #fff, 1647px 1298px #fff, 1233px 1387px #fff, 698px 1036px #fff,
     659px 1860px #fff, 388px 1412px #fff, 1212px 458px #fff, 755px 1468px #fff,
     696px 1654px #fff, 1144px 60px #fff;
+    
 }
 
 #stars1:after{
@@ -715,6 +724,17 @@ nav{
     16px 1650px #fff, 1021px 1075px #fff, 723px 424px #fff, 1175px 41px #fff,
     494px 1957px #fff, 1296px 431px #fff, 175px 1507px #fff, 831px 121px #fff,
     498px 1947px #fff, 617px 880px #fff, 240px 403px #fff;
+}
+#star{
+}
+#stars{
+    padding-right: 25%;
+    position: absolute;
+}
+#stars01{
+/* margin-left: 50%; */
+padding-left: 1950px;
+position: absolute;
 }
 
 @keyframes StarAnimation {
