--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-
-
 html{
     height: 100%;
     width: 100%;
@@ -10,6 +8,10 @@ html{
 body{
     color: white;
     font-family: Tahoma;
+}
+/* hide scrollbar but allow scrolling */
+body::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
 }
 nav h1{
 
@@ -101,7 +103,8 @@ li a{
 }
 #Contacts{
     margin-top: 2.5%;
-    margin-left: 32.5%;
+    text-align: center;
+    
 }
 #Contacts li{
     font-size: 25px;
