--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ a{
     margin-right: 10%;
     margin-left: 10%;
     margin-top: 2.5%;
-    z-index: -1;
+/*     z-index: -1; */
 }
 #ThisSite h1{
     font-size: min;
