Update styles.css for typo

--- a/styles.css
+++ b/styles.css
@@ -215,7 +215,7 @@ nav{
         content: 'Hello!👋';
     }
     16%{
-        content: 'Bounjour!👋';
+        content: 'Bonjour!👋';
     }
     22%{
         content: 'नमस्ते!👋';
